[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://TimeSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/Condicional1.jpg" type="Texture" id=8]
[ext_resource path="res://assets/img/Condicional2.jpg" type="Texture" id=9]
[ext_resource path="res://assets/img/Condicional3.jpg" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "TÃ­tulo del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSprite" parent="." instance=ExtResource( 5 )]

[node name="Condicional1" type="Sprite" parent="."]
position = Vector2( 1157.66, 447.197 )
scale = Vector2( 1.64034, 1.64034 )
texture = ExtResource( 8 )

[node name="Condicional2" type="Sprite" parent="."]
position = Vector2( 1163.45, 455.137 )
scale = Vector2( 1.63185, 1.63185 )
texture = ExtResource( 9 )

[node name="Condicional3" type="Sprite" parent="."]
position = Vector2( 1160.62, 452.969 )
scale = Vector2( 1.55664, 1.55664 )
texture = ExtResource( 10 )

[node name="Holder" type="Node2D" parent="."]
position = Vector2( 73.6222, 269.948 )
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
